--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <body>
     <img
       id="PacMan"
-      src="./PacMan1.png"
+      src="https://user-images.githubusercontent.com/113005568/193392871-55305fc3-5727-4d91-a890-a589deb848f1.png"
       width="200"
       onclick="Run()"
       style="position: absolute"
